--- a/Menu_hover.css
+++ b/Menu_hover.css
@@ -3,6 +3,7 @@
 {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
 }
  
@@ -12,12 +13,79 @@
     align-items: center;
     background: #0d0f1b;
     min-height: 100vh;
-    overflow: hidden;;
+    overflow: hidden;
+}
+.Main #curtain span{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 200%;
+    height: 100%;
+    display: block;
+    transform-origin: bottom left;
+    transition: 0.5s ease-in-out;
+    transform: rotate(-90deg);
+}
+.Main #curtain span:nth-child(1){
+    background: #ff1f6b;
+    transform: rotate(-90deg);
+    transition-delay: 0.2s;
+}
+.Main #curtain span:nth-child(2){
+    background: #219dff;
+    transform: rotate(-90deg);
+    transition-delay: 0.1s;
+}
+.Main #curtain span:nth-child(3){
+    background: #111;
+    transform: rotate(-90deg);
+    transition-delay: 0s;
+}
+.Main #curtain.active span:nth-child(1){
+    z-index: 2;
+    transition: 0s;
+}
+.Main #curtain.active span:nth-child(2){
+    z-index: 3;
+    transition: 0.1s;
+}
+.Main #curtain.active span:nth-child(3){
+    z-index: 4;
+    transition: 0.2s;
+}
+.Main #curtain.active span{
+    transform: rotate(0deg);
+}
+.Main .toggle{
+    position: fixed;
+    top: 20px;
+    right: 20px;
+    width: 70px;
+    height: 70px;
+    background: url(Menu_hover_menu.png);
+    background-repeat: no-repeat;
+    background-position: 5px;
+    z-index: 1000;
+    cursor: pointer;
+    transition: 0.5s;
+}
+.Main #curtain.active .toggle{
+    background: url(Menu_hover_close.png);
+    background-repeat: no-repeat;
+    background-position: 5px;
 }
 ul{
     position: relative;
     display: flex;
     flex-direction: column;
+    visibility: hidden;
+    opacity: 0;
+    transition-delay: 0s;
+}
+.Main #curtain.active ul{
+    visibility: visible;
+    opacity: 1;
+    transition-delay: 0.7s;
 }
 ul li{
     list-style: none;
@@ -40,6 +108,7 @@ ul li:before{
 ul li:hover:before{
     opacity: 0.05;
     letter-spacing: 0px;
+    z-index: 5;
 }
 ul li a{
     position: relative;
@@ -52,14 +121,14 @@ ul li a{
     letter-spacing: 2px;
     overflow: hidden;
     transition: 0.5s;
-    z-index: 1;
+    z-index: 6;
 }
 ul:hover li a{
     opacity: 0;
 }
 ul li a:hover{
     transform: scale(1.4);
-    z-index: 1000;
+    z-index: 500;
     background: #ff3f81;
     opacity: 1;
 }
