--- a/portfolio/css/Clip-path_transform1.css
+++ b/portfolio/css/Clip-path_transform1.css
@@ -12,7 +12,7 @@
     left: 0;
     width: 100%;
     height: 100vh;
-    background: url(Clip-path_transform1_bg.jpg);
+    background: url(/portfolio/add/Clip-path_transform1_bg.jpg);
     background-attachment: fixed;
     clip-path: circle(0px at center);
 }
