--- a/portfolio/css/Background_anim.css
+++ b/portfolio/css/Background_anim.css
@@ -30,7 +30,7 @@
     position: relative;
     width: 100%;
     height: 50vh;
-    background: url(Background_anim_check.jpg);
+    background: url(/portfolio/add/Background_anim_check.jpg);
     background-size: 100px 100px;
     animation: animate 1s linear infinite;
 }
