--- a/portfolio/css/Clip-path_transform2.css
+++ b/portfolio/css/Clip-path_transform2.css
@@ -12,7 +12,7 @@
     position: absolute;
     width: 100%;
     height: 100vh;
-    background: url(Clip-path_transform2_bg.jpg), linear-gradient(230deg, #f533d4, #2461bb);
+    background: url(/portfolio/add/Clip-path_transform2_bg.jpg), linear-gradient(230deg, #f533d4, #2461bb);
     background-blend-mode: luminosity;
     background-size: cover;
 }
